Thu Oct 30 10:14:51 2003  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* lib/test/unit/autorunner.rb: make fox runners work.

Thu Oct 30 09:32:26 2003  NAKAMURA Usaku <usa@ruby-lang.org>

	* process.c (rb_f_system): fixed lack of security check before
	  calling do_spawn() on win32. [ruby-talk:84555]

Thu Oct 30 02:46:35 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (proc_invoke): single array value to normal Proc#call
	  (i.e. not via lambda call), should be treated just like yield.
	  [ruby-dev:21726]

Thu Oct 30 02:25:48 2003  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/lib/openssl/buffering.rb (Buffering#initialize):
	  add new method to inherit @sync from @io.sync.

	* ext/openssl/lib/net/protocols.rb (SSLIO#ssl_connect): no need to
	  set sync flag explicitly.

	* ext/openssl/ossl_ssl.c (ossl_sslctx_initialize): call super.

	* ext/openssl/ossl_ssl.c (ossl_sslctx_setup): set extra chain
	  certificates in @extra_chain_cert.

Wed Oct 29 22:02:04 2003  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/drb/drbtest.rb: use rbconfig.rb to make the path of ruby
	  interpreter to exec, instead of test/ruby/envutil.rb,

Wed Oct 29 19:58:59 2003  NAKAMURA Usaku <usa@ruby-lang.org>

	* ext/tcltklib/tcltklib.c (CONST84): define CONST84 when it is not
	  defined and TCL_MAJOR_VERSION >= 8.

	* ext/tcltklib/tcltklib.c (VwaitVarProc, WaitVariableProc,
	  rb_threadVwaitProc): use CONST84 instead of CONST.

	* ext/tcltklib/tcltklib.c (ip_rbTkWaitCommand,
	  ip_rb_threadTkWaitCommand): use CONST84 always.

Wed Oct 29 17:27:05 2003  Tanaka Akira  <akr@m17n.org>

	* re.c (rb_reg_s_union, Init_Regexp): new method `Regexp.union'.

	* lib/pathname.rb (realpath): examine Dir.pwd because it may have
	  symlinks.

Wed Oct 29 17:16:31 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_longjmp): must not disturb original jump.
	  [ruby-dev:21733]

Wed Oct 29 15:28:34 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>
